--- a/frontend/src/Pages/RecipeDetails/recipeDetails.css
+++ b/frontend/src/Pages/RecipeDetails/recipeDetails.css
@@ -72,7 +72,7 @@
   gap: 3rem;
 }
 
-/* SASTOJCI STIL */
+
 .ingredients-panel {
   background: var(--bg-card);
   padding: 2rem;
@@ -110,7 +110,7 @@
   color: var(--accent-color);
 }
 
-/* UPUTE STIL */
+
 .instructions-text-large {
   font-size: 1.1rem;
   line-height: 1.8;
@@ -142,7 +142,7 @@
   display: flex;
   align-items: center;
   gap: 8px;
-  background-color: var(--bg-card); /* ili rgba(0,0,0,0.05) */
+  background-color: var(--bg-card); 
   padding: 6px 12px;
   border-radius: 20px;
   border: 1px solid rgba(0,0,0,0.1);
@@ -169,7 +169,7 @@
   color: var(--text-primary);
 }
 
-/* Poseban stil za Verified (MealDB) ako želiš da se ističe */
+
 .author-meta img[src*="themealdb"] {
   background: white;
   padding: 2px;
