--- a/frontend/src/Pages/Home/homePage.css
+++ b/frontend/src/Pages/Home/homePage.css
@@ -407,9 +407,10 @@
 }
 
 .homepage-hero-logo {
-  width: 800px; 
+  width: 60%; 
+  min-width: 550px;
+  max-width: 800px;
   height: auto;
   margin-bottom: -100px;
   margin-top: -70px;
 }
-
