--- a/frontend/src/Pages/Landing/LandingPage.css
+++ b/frontend/src/Pages/Landing/LandingPage.css
@@ -140,8 +140,12 @@
   }
 }
 
+
+
 .homepage-hero-logo {
-  width: 800px; 
+  width: 60%; 
+  min-width: 550px;
+  max-width: 800px;
   height: auto;
   margin-bottom: -100px;
   margin-top: -70px;
